Added palybooks and moved some files around
Signed-off-by: John Fortin <johnf@marketamerica.com>

--- a/cluster_init.yml
+++ b/cluster_init.yml
@@ -6,7 +6,6 @@
   become: yes
   become_user: root
   tasks:
-
   - name: Create cluster grouping
     group_by: key={{ couchbase_server_node_role }}
 
@@ -34,8 +33,11 @@
   become: yes
   become_user: root
   gather_facts: False
-  vars_files:
-    - ../defaults/main.yml
+  roles:
+  - role: couchbaselabs.couchbase-server
+    when: False
+#  vars_files:
+#    - roles/couchbaselabs.couchbase-server/defaults/main.yml
   vars:
     couchbase_server_primary_node: "{{hostvars[groups['primary'][0]]['ansible_fqdn']}}"
   tasks:
@@ -55,11 +57,11 @@
     wait_for: "port={{ couchbase_server_admin_port }} delay=2"
 
   - name: Configure cluster settings
-    shell: "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --cluster-init-password={{ couchbase_server_password }} --cluster-init-port={{couchbase_server_admin_port}} --cluster-init-ramsize={{ couchbase_server_ram }}"
-    when: cb_major_version['stdout'] != "4"
+    shell: "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --cluster-init-password={{ couchbase_server_password }} --cluster-init-port={{couchbase_server_admin_port}} --cluster-init-ramsize={{ couchbase_server_ram }} --cluster-index-ramsize={{ couchbase_index_ram }} --services={{ couchbase_server_node_services }} --index-storage-setting={{ couchbase_index_storage_setting }}"
+    when: cb_major_version['stdout'] == "4"
 
-  - name: Configure cluster settings
-    shell: "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-init-username={{ couchbase_server_admin }} --cluster-init-password={{ couchbase_server_password }} --cluster-init-port={{couchbase_server_admin_port}} --cluster-init-ramsize={{ couchbase_server_ram }} --services={{ couchbase_server_node_services }}"
+  - name: Name Cluster
+    shell: "{{ couchbase_server_bin_path }}/couchbase-cli setting-cluster -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --cluster-name={{ couchbase_cluster_name }}"
     when: cb_major_version['stdout'] == "4"
 
 #############################################################################
@@ -70,13 +72,10 @@
   become: yes
   become_user: root
   gather_facts: False
-  vars_files:
-    - ../defaults/main.yml
+  roles:
+  - role: couchbaselabs.couchbase-server
+    when: False
   tasks:
-
-#  - name: Get major version
-#    shell: cat /opt/couchbase/VERSION.txt | cut -d '.' -f1
-#    register: cb_major_version
 
   - name: Wait for Admin
     wait_for: "port={{ couchbase_server_admin_port }} delay=2"
@@ -96,8 +95,9 @@
 - hosts: primary
   become: yes
   become_user: root
-  vars_files:
-    - ../defaults/main.yml
+  roles:
+  - role: couchbaselabs.couchbase-server
+    when: False
   vars:
     couchbase_server_primary_node: "{{hostvars[groups['primary'][0]]['ansible_fqdn']}}"
   tasks:
@@ -110,13 +110,8 @@
     register: cb_major_version
 
   - name: Join additional cluster nodes
-    shell: "{{ couchbase_server_bin_path }}/couchbase-cli server-add -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --server-add={{hostvars[[item][0]]['inventory_hostname']}}:{{ couchbase_server_admin_port }} --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }}"
-    with_items: groups['additional']
-    when: cb_major_version['stdout'] != "4"
-
-  - name: Join additional cluster nodes
     shell: "{{ couchbase_server_bin_path }}/couchbase-cli server-add -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} --user={{ couchbase_server_admin }} --password={{ couchbase_server_password }} --server-add={{hostvars[[item][0]]['inventory_hostname']}}:{{ couchbase_server_admin_port }} --server-add-username={{ couchbase_server_admin }} --server-add-password={{ couchbase_server_password }} --services={{hostvars[[item][0]]['couchbase_server_node_services']}}"
-    with_items: groups['additional']
+    with_items: "{{ groups['additional'] }}"
     when: cb_major_version['stdout'] >= "4"
 
   - name: Rebalance cluster
