--- a/roles/couchbaselabs.couchbase-server/defaults/main.yml
+++ b/roles/couchbaselabs.couchbase-server/defaults/main.yml
@@ -8,6 +8,8 @@
 # couchbase_server_admin: Couchbase Server administrator user name
 # couchbase_server_password: Couchbase Server administrator user password
 # couchbase_server_ram: The per server RAM quota specified in megabytes
+# couchbase_index_ram: The per server index RAM quota specified in megabytes
+# couchbase_index_storage_setting:
 # couchbase_server_admin_port: Administration and web console port
 # couchbase_server_epmd_port: Erlang Port Mapper Daemon (EPMD) port
 # couchbase_server_api_port: Couchbase Server API port
@@ -32,6 +34,7 @@
 # couchbase_server_tmpdir: System wide TMPDIR for cbcollect_info
 # couchbase_server_tune_os: Whether to tune OS with optimized settings
 # couchbase_server_firewall: Whether to use strict firewall rules
+# couchbase_cluster_name:
 #
 #############################################################################
 
@@ -39,6 +42,8 @@ couchbase_server_edition: "enterprise"
 couchbase_server_admin: "Administrator"
 couchbase_server_password: "couchbase"
 couchbase_server_ram: 3072
+couchbase_index_ram: 3072
+couchbase-index_storage_setting: default
 couchbase_server_admin_port: 8091
 couchbase_server_epmd_port: 4369
 couchbase_server_admin_ssl_port: 18091
@@ -51,10 +56,10 @@ couchbase_server_sshd_port: 22
 couchbase_server_home_path: "/opt/couchbase"
 couchbase_server_bin_path: "{{ couchbase_server_home_path }}/bin"
 couchbase_server_config_file: "{{ couchbase_server_home_path }}/var/lib/couchbase/config/config.dat"
-couchbase_server_filesystem: "ext4"
-couchbase_server_mountpoint: "/"
-couchbase_server_partition: "/dev/mapper/VolGroup-lv_root"
-couchbase_server_mount_options: "noatime,barrier=0,errors=remount-ro"
+couchbase_server_filesystem: "xfs"
+couchbase_server_mountpoint: "/var/lib/couchbase"
+couchbase_server_partition: "/dev/cb-data-vg01/data-lv01"
+couchbase_server_mount_options: "rw,noatime,nobarrier"
 couchbase_server_data_path: "{{ couchbase_server_home_path }}/var/lib/couchbase/data"
 couchbase_server_index_path: "{{ couchbase_server_home_path }}/var/lib/couchbase/data"
 couchbase_server_log_path: "{{ couchbase_server_home_path }}/var/lib/couchbase/logs"
@@ -64,3 +69,4 @@ couchbase_server_tmpdir: "/tmp"
 couchbase_server_tune_os: false
 couchbase_server_firewall: false
 couchbase_server_local_package: false
+couchbase_cluster_name: couchbase
