--- a/roles/couchbaselabs.couchbase-server/files/etc_security_limits.d_couchbase-server.conf
+++ b/roles/couchbaselabs.couchbase-server/files/etc_security_limits.d_couchbase-server.conf
@@ -1,4 +1,4 @@
 # Couchbase Server limits set by ansible-couchbase-server
-#
-couchbase soft nofile 10240
-couchbase hard nofile 10240
+couchbase soft nofile 131072
+couchbase hard nofile 131072
+couchbase hard core unlimited
